@@ -86,6 +86,13 @@ user "#bot-ops" {
     privs "op";
 }
 
+# Command aliases.
+# These can be used to alias a shortcut to a longer command.
+# Like so: alias "PL UNO PLAY";
+aliases {
+    alias "RELOAD REHASH";
+}
+
 # Database.
 database {
     # Format. This can be one of the following:
